Revision history for {{$dist->name}}

{{$NEXT}}

5.017     2014-05-17 08:35:33-04:00 America/New_York
        - dotfiles and dot-directories are now included in sharedirs
        - ModuleBuild and MakeMake should not re-build if it isn't needed
        - authordeps now better understands "perl" dep
        - munging of README is delayed to prevent unneeded work and
          complication
        - MANIFEST is now treated as a binary file
        - 'dzil setup' now warns that credentials are stored in the clear
        - MakeMaker should include fewer empty and useless hashrefs
        - Makefile.old is now pruned as cruft

5.016     2014-05-05 22:27:06-04:00 America/New_York
        - hint about [Encoding] plugin in encoding error message (David
          Golden)

5.015     2014-03-30 21:55:36-04:00 America/New_York
        - make it easier to have multiple PAUSE configs using UploadToCPAN's
          pause_cfg_dir option (thanks, David Golden)

5.014     2014-03-16 16:47:07+01:00 Europe/Paris
        - Added 'jobs' argument for 'dzil test' for parallel testing (thanks,
          David Golden!)
        - add default_jobs attribute to TestRunner role
        - fix the behavior of 'dzil add' with more than one file
          (thanks, Leon Timmermans!)

5.013     2014-02-08 17:08:16-05:00 America/New_York
        - META.json is now a UTF-8 file, rather than ASCII
        - document the use of filefinders in [PkgVersion], and remove
          filtering out of .t, .pod files; do skip non-text files, though
        - always load modules in "extra tests" like pod-coverage.t
        - PruneCruft also prunes ./fatlib
        - avoid being tricked by statements in __END__ section when looking for
          variable assignments
        - if "dzil install" fails due to exception, it is now propagated
        - provide a better error when terminal encoding can't be determined

5.012     2014-01-15 09:58:00-05:00 America/New_York